# AudioTranscriptionDemo

./: .gitignore  Dockerfile  README.md  diagram.mmd  docker-compose.yml  download_vosk_model.sh  pyproject.toml
src/audio_transcription_demo/: __init__.py  api.py  main.py
src/audio_transcription_demo/recognizers/: __init__.py  base.py  factory.py  recognizer_base.py  recognizer_factory.py  speechbrain.py  vosk.py  whisper.py
src/audio_transcription_demo/sources/: __init__.py  base.py  factory.py  file.py  file_audio_source.py  microphone.py  microphone_audio_source.py  source_base.py  source_factory.py
src/audio_transcription_demo/use_cases/: __init__.py  audio_transcription.py  base.py  factory.py  live_transcribe.py  meeting_minutes.py  transcribe_file.py
src/audio_transcription_demo/utils/: __init__.py  audio.py  transcription.py  utils.py
src/frontend/: transcription_frontend.html
